--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </p>
         <h2>SMALLER TITLE</h2>
         
-      <p><label for="mn-figure-1" class="margin-toggle">&#8853;</label><input type="checkbox" id="mn-figure-1" class="margin-toggle"/><span class="marginnote"><img src="http://katerena.github.io/img/rings.jpg"/>Picture caption - replace http://katerena.github.io/img/rings.jpg with your URL</p>
+      <p><label for="mn-figure-1" class="margin-toggle">&#8853;</label><input type="checkbox" id="mn-figure-1" class="margin-toggle"/><span class="marginnote"><img src="http://www.engraversnetwork.com/files/placeholder.jpg"/>Picture caption - replace http://www.engraversnetwork.com/files/placeholder.jpg with your URL</p>
           
         <h3>Even smaller title</h3>
         List:
