--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style type="text/css">
    table#newspaper-tone > thead > tr > th:first-child { padding-right: 20%; }
-
+   table#newspaper-tone > tbody > tr > td:nth-child(1) { padding-right: 15%; }
+   table#newspaper-tone > thead > tr > th:nth-child(2) { width: 70px; }
+   table#newspaper-tone > thead > tr > th:nth-child(3) { padding: 0 59px;
+                                                         min-width: 100px; }
+   
+   @media screen and (max-width: 760px) { table#newspaper-tone > thead > tr > th:first-child { padding-right: 0; }
+                                          table#newspaper-tone > thead > tr > th:nth-child(2) { padding-right: 0; }
+                                          table#newspaper-tone > thead > tr > th:nth-child(3) { padding-right: 0; }
+                                          table#newspaper-tone > tbody > tr > td:nth-child(1) { padding-right: 0; }
+                                          table#newspaper-tone > tbody > tr > td:nth-child(2) { padding-right: 0; }
+                                          table#newspaper-tone > tbody > tr > td:nth-child(3) { padding-right: 0; }}
+  </style>
     
       <style type="text/css" media="screen">
         .gr_grid_container {
