--- a/openings.html
+++ b/openings.html
@@ -22,7 +22,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
+
 </head>
 
 <body>
@@ -47,10 +47,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="pubs.html">Publications</a>
+                        <a href="#">Publications</a>
                     </li>
                     <li>
                         <a href="openings.html">Openings</a>
@@ -73,22 +73,15 @@
         <!-- Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Kuksenok Research Group<br><small>Computational Modeling of Multicomponent Multifunctional Materials</small>
-                </h1>
-                <div class="illustration"><a href=pubs.html><img src="images/Kuksenok%20Balazs%202016.gif"><br><img src="images/Liu%20et%20al%202015.gif"></a></div>
-                <h2>About the PI</h2>
-                <p>Dr. Kuksenok is currently an Associate Professor at the Materials Science and Engineering Department at Clemson University in Clemson, SC. She was formerly a Research Associate Professor at the Chemical Engineering Department at the University of Pittsburgh, Pittsburgh, PA. Dr. Kuksenok  received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine, in 1997.  Dr. Kuksenok’s research interests and accomplishments span the following areas of materials science: elastodynamics of responsive polymer gels, dynamics of multi-component polymer blends, biomimetic materials, pattern formation in non-equilibrium chemical systems, complex fluids dynamics, and theory of heterogeneous liquid crystalline systems. Dr. Kuksenok has co-authored over 70 peer-reviewed publications and 5 book chapters.</p>
-                <p>Phone: (864) 656-5956<br>
-Office: 299D Sirrine Hall<br>
-E-mail: okuksen at clemson dot edu</a></p>
-        
-                <h2>Research Areas</h2>
-<ul>
-    <li>Computational design of biomimetic materials</li>
- <li>Theory and computer simulations of multi-component polymer blends </li>
- <li>Interfacial phenomena and surface properties</li>
- <li>Pattern formation in non-equilibrium systems</li>
- <li>Heterogeneous liquid crystalline systems</li>
+                <h1 class="page-header">Openings</h1>
+                <h2>Ph.D. Students</h2> 
+<p>We are looking for enthusiastic and motivated students to work on a number of exciting projects on computational modeling of multifunctional, multicomponent advanced polymeric materials. Students with background in Physics, Materials Science and Engineering, or Mechanical and Chemical Engineering are encouraged to apply. Prior experience in computational modeling (coding in C/C++) is highly desired. Our students are encouraged to present their work at the national and international research conferences and will have opportunities to collaborate with experimental groups. </p>
+
+                <p>Interested candidates should send their curriculum vitae and a brief description of their  research interests to Dr. Olga Kuksenok at <em>okuksen at clemson dot edu</em></p>
+
+<h2>Undergraduate Students</h2>
+
+<p>We have several openings for Clemson undergraduate students to participate in the undergraduate research projects on computational modeling and simulation of multi-component advanced polymeric materials.  Prior experience in computational modeling (coding in C/C++) is highly desired. Applicants should send their curriculum vitae and a brief description of their research interests to Dr. Olga Kuksenok at <em>okuksen at clemson dot edu</em></p>
                 </ul>
             </div>
         </div>
