--- a/pubs.html
+++ b/pubs.html
@@ -52,6 +52,9 @@
                     <li>
                         <a href="#">Publications</a>
                     </li>
+                    <li>
+                        <a href="openings.html">Openings</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
