Press release pitt

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@ E-mail: okuksen at clemson dot edu</a></p>
  <li>Pattern formation in non-equilibrium systems</li>
  <li>Heterogeneous liquid crystalline systems</li>
                 </ul>
+        <h2>In the Press</h2>
+        <ul>
+        <li><a href=http://www.engineering.pitt.edu/News/2015/Balazs-Kuksenok-4D-Printing/>Hybrid material that responds to heat and light presents future potential for 4D-printed adaptive devices</a>
+ PITTSBURGH (December 14, 2015) … Combining photo-responsive fibers with thermo-responsive gels, researchers at the University of Pittsburgh’s Swanson School of Engineering and Clemson University have modeled a new hybrid material that could reconfigure itself multiple times into different shapes when exposed to light and heat, allowing for the creation of devices that not only adapt to their environment, but also display distinctly different behavior in the presence of different stimuli.</li></ul>
             </div>
         </div>
         <!-- /.row -->
