--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ E-mail: okuksen at clemson dot edu</a></p>
                 </ul>
         <h2>In the Press</h2>
         <ul>
-        <li><a href=http://www.engineering.pitt.edu/News/2015/Balazs-Kuksenok-4D-Printing/>Hybrid material that responds to heat and light presents future potential for 4D-printed adaptive devices</a>
- PITTSBURGH (December 14, 2015) … Combining photo-responsive fibers with thermo-responsive gels, researchers at the University of Pittsburgh’s Swanson School of Engineering and Clemson University have modeled a new hybrid material that could reconfigure itself multiple times into different shapes when exposed to light and heat, allowing for the creation of devices that not only adapt to their environment, but also display distinctly different behavior in the presence of different stimuli.</li></ul>
+            <li><a href=http://www.materialstoday.com/materials-chemistry/news/new-material-responds-to-light-and-heat/>New adaptive material responds differently to light and heat</a> (December 29, 2015) Materials Today</li>
+        <li><a href=http://www.engineering.pitt.edu/News/2015/Balazs-Kuksenok-4D-Printing/>Hybrid material that responds to heat and light presents future potential for 4D-printed adaptive devices</a> (December 14, 2015) University of Pittsburgh</li></ul>
             </div>
         </div>
         <!-- /.row -->
