Updated new project content

--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Kuksenok Research Group</title>
+    <title>Kuksenok Research Group Openings</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -22,10 +22,11 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
+
 </head>
 
 <body>
+
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -39,8 +40,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a class="navbar-brand" href="#">
-                	<span class="glyphicon glyphicon-fire"></span> 
-                	Logo
+                    <span class="glyphicon glyphicon-fire"></span> 
+                    Logo
                 </a>-->
             </div>
             <!-- Navbar links -->
@@ -71,29 +72,116 @@
         <!-- Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Kuksenok Research Group<br><small>Computational Modeling of Multicomponent Multifunctional Materials</small>
-                </h1>
-                <div class="illustration" style="width:400px">
-                	<a href=pubs.html#72><img src="images/hp/movie_opensref72_1.gif" width=300 style="float:left"></a><a href=projects.html><img src=images/s5_animgif.gif width=150></a><a href=pubs.html#26><img src="images/hp/LBTernary_OpensRef26image_4.png" height=100 style="margin:50px;"></a><a href=projects.html><img src=images/s3_i4.png width=200></a></div>
-                <!--<h2>About the PI</h2>-->
-                <p>Dr. Kuksenok is an Associate Professor at the Materials Science and Engineering Department at Clemson University in Clemson, SC.  Dr. Kuksenok received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine, in 1997. Dr. Kuksenok’s research interests and accomplishments span the following areas of materials science: elastodynamics of responsive polymer gels, dynamics of multi-component polymer blends, biomimetic and biological materials, pattern formation in non-equilibrium chemical systems, complex fluids dynamics, and theory of heterogeneous liquid crystalline systems. Dr. Kuksenok has co-authored over 80 peer-reviewed publications and 6 book chapters.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao>More on Google Scholar.</a></em></p>
-                <p>Phone: (864) 656-5956<br>
-Office: 299D Sirrine Hall<br>
-E-mail: okuksen at clemson dot edu</a></p>
-        
-                <div class="h2">Research Areas</div>
-<ul>
-    <li>Computational design of biomimetic materials</li>
- <li>Theory and computer simulations of soft active matter</li>
-<li>Pattern formation in synthetic and biological systems</li>
-                </ul>
-        <div class="h2">In the Press</div>
-        <ul>
+                <h1 class="page-header">Projects</h1>
+                <div class="item">
+                    <div class="small">
+                        <a href=http://pubs.acs.org/toc/accacs/7/12><img src="images/accacs_v007i012-4.jpg"></a>
+                    </div>
+                    <div class="description">
+                        <p class="bigtitle">Modeling enzyme-copolymer conjugates</p>
+                        <p class="title"><Strong>Focus on designing highly thermo stable conjugates</Strong>
+                            <br>Hen egg white lysozyme + copolymer</p>
+                        <p class="subtitle"><Strong>
+Chandan Choudhury, Sidong Tu</Strong><br>Collaborators: <strong>I. Luzinov</strong> (CU), <strong>S. Minko</strong> (UGA), <strong>I. Lednev</strong> ( UA)</p>
+<div class="sub">
+<span class="lbl">Approach:</span>
+Molecular Dynamics: GROMACS<Br>
+<!--CHARMM36 ff, TIP3P-->
+Details in <a href=http://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138>http://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138</a>
+<div class="morepics">
+    <img src=images/s3_i1.png>
+    <img src=images/s2_i2.png>
+    <img src=images/s3_i3.png>
+    <img src=images/s3_i4.png>
+</div><br><br>
+<span class="lbl">News:</span>
+Congratulations to Chandan and Sidong on <A href=http://pubs.acs.org/toc/accacs/7/12>the cover of ACS Catalysis (pictured, left)</A>
+</div>
+                    </div>
+                </div>
 
-            <li><a href=http://www.materialstoday.com/materials-chemistry/news/new-material-responds-to-light-and-heat/>New adaptive material responds differently to light and heat</a> (December 29, 2015) Materials Today</li>
-        <li><a href=http://www.engineering.pitt.edu/News/2015/Balazs-Kuksenok-4D-Printing/>Hybrid material that responds to heat and light presents future potential for 4D-printed adaptive devices</a> (December 14, 2015) University of Pittsburgh</li></ul>
+                <div class="item">
+                    <div class="small">
+                        <img src=images/s4_i1.png><br>
+                        <img src=images/s4_i2.png>
+                    </div>
+                    <div class="description">
+                        <p class="bigtitle">Magnetoelastic composites: gels filled with ferromagnetic nanoparticles</p>
+                        <p class="title">Focus on selective response on GHz frequencies</p>
+                        <p class="subtitle"><Strong>
+Oksana Savchak
+</Strong><br>Collaborators: <strong>K. Kornev</strong> (CU)</p>
+<div class="sub">
+<span class="lbl">Approaches:</span>
+<Br>3D Gel elastodynamics: 3D gLSM<Br>
+<em>O. Kuksenok et al. PRE (2008), 78 (4)<br>
+Yashin et al, Rep. Prog. Phys 75(6) (2012)</em><br><br>
+Heating rate of non-deformable composites<br>
+<em>Y. Gu, KG Kornev, J. Appl Phys.199 (2016)</em>
+<br><br>
+<span class="lbl">Potential applications: </span>
+Using GHz signal to regulate mechanical response of
+soft active gel-based systems
+</div>
+                    </div>
+                </div>
+
             </div>
         </div>
+
+
+                        <div class="item">
+                    <div class="small">
+                        <img src=images/s5_image.png><br>
+                        <img src=images/s5_animgif.gif>
+                    </div>
+                    <div class="description">
+                        <p class="bigtitle">Pattern formation in confined photo- and thermo- responsive gels</p>
+                        <p class="title">Modeling volume phase transitions
+and pattern formation in
+responsive gels<br>Focus on confined gels under non-equilibrium conditions</p>
+                        <p class="subtitle"><Strong>
+Yao Xiong
+</Strong></p>
+<div class="sub">
+<span class="lbl">Approach:</span>
+3D Gel elastodynamics: 3D gLSM<Br>
+<em>O. Kuksenok et al. PRE (2008), 78 (4)<br>
+Yashin et al, Rep. Prog. Phys 75(6) (2012)</em>
+</div>
+                    </div>
+                </div>
+
+
+                        <div class="item">
+                    <div class="small">
+                        <img src=images/s6_i3.png>
+                    </div>
+                    <div class="description">
+                        <p class="bigtitle">PAM gels dynamics in water-oil emulsions
+</p>
+                        <p class="title"><Strong>Modeling polyacrylamide (PAM) gels placed
+in water-oil emulsions</Strong><br>Focus on interfacial behavior of PAM nanogel<br>
+Modify nanogel properties to tailor properties of emultions</p>
+                        <p class="subtitle"><Strong>
+Chandan Choudhury
+</Strong></p>
+<div class="sub">
+<span class="lbl">Approach:</span>
+Dissipative Particles Dynamics (DPD)
+</div>
+<div class="morepics">
+    <img src=images/s6_i1.png>
+    <img src=images/s6_i2.png>
+</div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+
         <!-- /.row -->
 
     </div>
