--- a/people.html
+++ b/people.html
@@ -27,6 +27,7 @@
 
 <body>
 
+
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -39,8 +40,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a class="navbar-brand" href="#">
-                	<span class="glyphicon glyphicon-fire"></span> 
-                	Logo
+                    <span class="glyphicon glyphicon-fire"></span> 
+                    Logo
                 </a>-->
             </div>
             <!-- Navbar links -->
@@ -50,15 +51,13 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Publications</a>
+                        <a href="people.html">People</a>
                     </li>
                     <li>
-                        <a href="openings.html">Openings</a>
+                        <a href="projects.html">Projects</a>
                     </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="KuksenokResumeDec2015.pdf">CV (pdf)</a>
+                        <a href="pubs.html">Publications</a>
                     </li>
                 </ul>
             </div>
@@ -73,13 +72,73 @@
         <!-- Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Openings</h1>
-                <h2>Ph.D. Students</h2> 
-<p>We are looking for enthusiastic and motivated students to work on a number of exciting projects on computational modeling of multifunctional, multicomponent advanced polymeric materials. Students with background in Physics, Materials Science and Engineering, or Mechanical and Chemical Engineering are encouraged to apply. Prior experience in computational modeling (coding in C/C++) is highly desired. Our students are encouraged to present their work at the national and international research conferences and will have opportunities to collaborate with experimental groups. </p>
+                <h1 class="page-header">People</h1>
 
-                <p>Interested candidates should send their curriculum vitae and a brief description of their  research interests to Dr. Olga Kuksenok at <em>okuksen at clemson dot edu</em></p>
+                <div class="item">
+                    <div class="small">
+                        <img src="images/people/kuksenok.jpg">
+                    </div>
+                    <div class="description">
+                        <p class="title">Dr. Olga Kuksenok</p>
+                        <p class="subtitle">Associate Professor<br>Principal Investigator</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="small">
+                        <img src="images/people/choudhury.png">
+                    </div>
+                    <div class="description">
+                        <p class="title">Dr. Chandan K. Choudhury</p>
+                        <p class="subtitle">Post-Doctoral Researcher</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="small">
+                        <img src="images/people/tu.bmp">
+                    </div>
+                    <div class="description">
+                        <p class="title">Sidong Tu</p>
+                        <p class="subtitle">PhD Student</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="small">
+                        <img src="images/people/xiong.png">
+                    </div>
+                    <div class="description">
+                        <p class="title">Yao Xiong</p>
+                        <p class="subtitle">PhD Student</p>
+                    </div>
+                </div>
+                <div class="item">
 
-<h2>Undergraduate Students</h2>
+                    <div class="small">
+                        <img src="images/people/palkar.png">
+                    </div>
+                    <div class="description">
+                        <p class="title">Vaibhav Palkar</p>
+                        <p class="subtitle">PhD Student</p>
+                        <p class="subtitle">co-advised with <a href=http://www.clemson.edu/cecas/departments/mse/people/faculty/kornev.html>Prof. K. Kornev</a></p>
+                    </div>
+                </div>
+                <div class="item">
+                    
+                    <div class="small">
+                        <img src="images/people/savchak.png">
+                    </div>
+                    <div class="description">
+                        <p class="title">Oksana Savchak</p>
+                        <p class="subtitle">MS Student</p>
+                    </div>
+                </div>
+
+<h1 class="page-header">Former Group Members</h1>
+
+<p><Strong>Chinmay Sonar</Strong>, Summer Internship from  Indian Institute of Technology Gandhinagar, Summer 2017</p>
+<p><strong>Samantha  Collins</strong>, Interfaces and Surfaces REU, Summer 2017</p>
+<p><strong>Tyler Morrison</strong>, Interfaces and Surfaces REU, Summer 2016</p>
+
+<h1 class="page-header">Openings</h1>
 
 <p>We have several openings for Clemson undergraduate students to participate in the undergraduate research projects on computational modeling and simulation of multi-component advanced polymeric materials.  Prior experience in computational modeling (coding in C/C++) is highly desired. Applicants should send their curriculum vitae and a brief description of their research interests to Dr. Olga Kuksenok at <em>okuksen at clemson dot edu</em></p>
                 </ul>
