--- a/pubs.html
+++ b/pubs.html
@@ -39,8 +39,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a class="navbar-brand" href="#">
-                	<span class="glyphicon glyphicon-fire"></span> 
-                	Logo
+                    <span class="glyphicon glyphicon-fire"></span> 
+                    Logo
                 </a>-->
             </div>
             <!-- Navbar links -->
@@ -50,15 +50,13 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Publications</a>
+                        <a href="people.html">People</a>
                     </li>
                     <li>
-                        <a href="openings.html">Openings</a>
+                        <a href="projects.html">Projects</a>
                     </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="KuksenokResumeDec2015.pdf">CV (pdf)</a>
+                        <a href="pubs.html">Publications</a>
                     </li>
                 </ul>
             </div>
@@ -66,6 +64,7 @@
         </div>
         <!-- /.container -->
     </nav>
+
 
     <!-- Content -->
     <div class="container">
