Bad hyphenation fix

--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="description">
                         <p class="bigtitle">Modeling enzyme-copolymer conjugates</p>
-                        <p class="title"><Strong>Focus on designing highly thermo stable conjugates</Strong>
+                        <p class="title"><Strong>Focus on designing highly thermostable conjugates</Strong>
                             <br>Hen egg white lysozyme + copolymer</p>
                         <p class="subtitle"><Strong>
 Chandan Choudhury, Sidong Tu</Strong><br>Collaborators: <strong>I. Luzinov</strong> (CU), <strong>S. Minko</strong> (UGA), <strong>I. Lednev</strong> ( UA)</p>
@@ -136,7 +136,7 @@ soft active gel-based systems
                         <img src=images/s5_animgif.gif>
                     </div>
                     <div class="description">
-                        <p class="bigtitle">Pattern formation in confined photo- and thermo- responsive gels</p>
+                        <p class="bigtitle">Pattern formation in confined photo- and thermoresponsive gels</p>
                         <p class="title">Modeling volume phase transitions
 and pattern formation in
 responsive gels<br>Focus on confined gels under non-equilibrium conditions</p>
