Added contact information and links to profiles

--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                         <p class="title"><Strong>Focus on designing highly thermostable conjugates</Strong>
                             <br>Hen egg white lysozyme + copolymer</p>
                         <p class="subtitle"><Strong>
-Chandan Choudhury, Sidong Tu</Strong><br>Collaborators: <strong>I. Luzinov</strong> (CU), <strong>S. Minko</strong> (UGA), <strong>I. Lednev</strong> ( UA)</p>
+<a href=people.html#cc>Chandan Choudhury</a>, <a href=people.html#st>Sidong Tu</a></Strong><br>Collaborators: <strong>I. Luzinov</strong> (CU), <strong>S. Minko</strong> (UGA), <strong>I. Lednev</strong> ( UA)</p>
 <div class="sub">
 <span class="lbl">Approach:</span>
 Molecular Dynamics: GROMACS<Br>
@@ -109,7 +109,7 @@ Congratulations to Chandan and Sidong on <A href=http://pubs.acs.org/toc/accacs/
                         <p class="bigtitle">Magnetoelastic composites: gels filled with ferromagnetic nanoparticles</p>
                         <p class="title">Focus on selective response on GHz frequencies</p>
                         <p class="subtitle"><Strong>
-Oksana Savchak
+<a href=people.html#os>Oksana Savchak</a>
 </Strong><br>Collaborators: <strong>K. Kornev</strong> (CU)</p>
 <div class="sub">
 <span class="lbl">Approaches:</span>
@@ -141,7 +141,7 @@ soft active gel-based systems
 and pattern formation in
 responsive gels<br>Focus on confined gels under non-equilibrium conditions</p>
                         <p class="subtitle"><Strong>
-Yao Xiong
+<a href=people.html#yx>Yao Xiong</a>
 </Strong></p>
 <div class="sub">
 <span class="lbl">Approach:</span>
@@ -164,7 +164,7 @@ Yashin et al, Rep. Prog. Phys 75(6) (2012)</em>
 in water-oil emulsions</Strong><br>Focus on interfacial behavior of PAM nanogel<br>
 Modify nanogel properties to tailor properties of emultions</p>
                         <p class="subtitle"><Strong>
-Chandan Choudhury
+<a href=people.html#cc>Chandan Choudhury</a>
 </Strong></p>
 <div class="sub">
 <span class="lbl">Approach:</span>
