--- a/people.html
+++ b/people.html
@@ -81,54 +81,61 @@
                     <div class="description">
                         <p class="title">Dr. Olga Kuksenok</p>
                         <p class="subtitle">Associate Professor<br>Principal Investigator</p>
+                        <p class="subtitle">okuksen@<img src=images/emailsuffix.png height=16></p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="small">
-                        <img src="images/people/choudhury.png">
+                        <a name=cc><img src="images/people/choudhury.png"></a>
                     </div>
                     <div class="description">
                         <p class="title">Dr. Chandan K. Choudhury</p>
                         <p class="subtitle">Post-Doctoral Researcher</p>
+                        <p class="subtitle">ckchoud@<img src=images/emailsuffix.png height=16></p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="small">
-                        <img src="images/people/tu.bmp">
+                        <a name=st><img src="images/people/tu.bmp"></a>
                     </div>
                     <div class="description">
                         <p class="title">Sidong Tu</p>
                         <p class="subtitle">PhD Student</p>
+                        <p class="subtitle">sidongt@g.<img src=images/emailsuffix.png height=16></p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="small">
-                        <img src="images/people/xiong.png">
+                        <a name=yx><img src="images/people/xiong.png"></a>
                     </div>
                     <div class="description">
                         <p class="title">Yao Xiong</p>
                         <p class="subtitle">PhD Student</p>
+                        <p class="subtitle">xiong3@g.<img src=images/emailsuffix.png height=16></p>
                     </div>
                 </div>
                 <div class="item">
 
                     <div class="small">
-                        <img src="images/people/palkar.png">
+                        <a name=vp><img src="images/people/palkar.png"></a>
                     </div>
                     <div class="description">
                         <p class="title">Vaibhav Palkar</p>
                         <p class="subtitle">PhD Student</p>
+                        <p class="subtitle">vpalkar@g.<img src=images/emailsuffix.png height=16></p>
                         <p class="subtitle">co-advised with <a href=http://www.clemson.edu/cecas/departments/mse/people/faculty/kornev.html>Prof. K. Kornev</a></p>
+
                     </div>
                 </div>
                 <div class="item">
                     
                     <div class="small">
-                        <img src="images/people/savchak.png">
+                        <a name="os"><img src="images/people/savchak.png"></a>
                     </div>
                     <div class="description">
                         <p class="title">Oksana Savchak</p>
                         <p class="subtitle">MS Student</p>
+                        <p class="subtitle">osavcha@<img src=images/emailsuffix.png height=16></p>
                     </div>
                 </div>
 
