--- a/projects.html
+++ b/projects.html
@@ -133,7 +133,7 @@ soft active gel-based systems
                         <div class="item">
                     <div class="small">
                         <img src=images/s5_image.png><br>
-                        <img src=images/s5_animgif.gif>
+                        <img src=images/s5_Animation.gif>
                     </div>
                     <div class="description">
                         <p class="bigtitle">Pattern formation in confined photo- and thermoresponsive gels</p>
