--- a/index.html
+++ b/index.html
@@ -87,13 +87,15 @@ E-mail: okuksen at clemson dot edu</a></p>
  <li>Theory and computer simulations of soft active matter</li>
 <li>Pattern formation in synthetic and biological systems</li>
                 </ul>
-        <div class="h2">In the Press</div>
+<!--        <div class="h2">In the Press</div>
         <ul>
 
             <li><a href=http://www.materialstoday.com/materials-chemistry/news/new-material-responds-to-light-and-heat/>New adaptive material responds differently to light and heat</a> (December 29, 2015) Materials Today</li>
         <li><a href=http://www.engineering.pitt.edu/News/2015/Balazs-Kuksenok-4D-Printing/>Hybrid material that responds to heat and light presents future potential for 4D-printed adaptive devices</a> (December 14, 2015) University of Pittsburgh</li></ul>
-            </div>
-        </div>
+           -->
+	
+	</div>
+</div>
         <!-- /.row -->
 
     </div>
