--- a/projects.html
+++ b/projects.html
@@ -85,10 +85,10 @@
 <a href=people.html#cc>Chandan Choudhury</a>, <a href=people.html#st>Sidong Tu</a></Strong><br>Collaborators: <strong>I. Luzinov</strong> (CU), <strong>S. Minko</strong> (UGA), <strong>I. Lednev</strong> ( UA)</p>
 <div class="sub">
 <span class="lbl">Approach:</span>
-Molecular Dynamics: GROMACS<Br>
 <!--CHARMM36 ff, TIP3P-->
 Details in <a href=http://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138>http://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138</a>
-<div class="morepics">
+and <a href=https://cdn-pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?journalCode=bomaf6>https://cdn-pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027</a>
+	<div class="morepics">
     <img src=images/s3_i1.png>
     <img src=images/s2_i2.png>
     <img src=images/s3_i3.png>
@@ -170,6 +170,7 @@ Modify nanogel properties to tailor properties of emultions</p>
 <span class="lbl">Approach:</span>
 Dissipative Particles Dynamics (DPD)
 </div>
+			    Details in <a href=https://www.cambridge.org/core/journals/mrs-advances/article/modeling-dynamics-of-polyacrylamide-gel-in-oilwater-mixtures-dissipative-particle-dynamics-approach/83EE1348E6F224646C738462D7AC39A3>https://www.cambridge.org/.../</a>
 <div class="morepics">
     <img src=images/s6_i1.png>
     <img src=images/s6_i2.png>
