Added new project links

--- a/projects.html
+++ b/projects.html
@@ -112,8 +112,10 @@ Congratulations to Chandan and Sidong on <A href=http://pubs.acs.org/toc/accacs/
 <a href=people.html#os>Oksana Savchak</a>
 </Strong><br>Collaborators: <strong>K. Kornev</strong> (CU)</p>
 <div class="sub">
-<span class="lbl">Approaches:</span>
-<Br>3D Gel elastodynamics: 3D gLSM<Br>
+
+                Details in <a href=https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e>https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e</a>
+
+<br><Br>3D Gel elastodynamics: 3D gLSM<Br>
 <em>O. Kuksenok et al. PRE (2008), 78 (4)<br>
 Yashin et al, Rep. Prog. Phys 75(6) (2012)</em><br><br>
 Heating rate of non-deformable composites<br>
