--- a/pubs.html
+++ b/pubs.html
@@ -75,9 +75,21 @@
                 <h1 class="page-header">Publications
                 </h1>
 
-<p>80. Choudhury, C.K., Tu, S., Luzinov, I., Minko, S., Kuksenok, O., <strong><a href=https://cdn-pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?journalCode=bomaf6
->"Designing Highly Thermostable Lysozyme-Copolymer Conjugates: Focus on Effect of Polymer Concentration"</a></strong> Biomacromolecules (2018, in Press)</p>
+<p>85. Tu, S., Choudhury, C. K., Luzinov, I., Kuksenok., O. <strong><a href= https://doi.org/10.1016/j.cossms.2019.01.003  
+>"Recent advances towards applications of molecular bottlebrushes and their Conjugates”</a></strong>. Current Opinion in Solid State and Materials Science (2019) </p>
 
+
+<p>84. Savchak, O., Morrison, T., Kornev, K.G. and Kuksenok, O. <strong><a href=https://pubs.rsc.org/en/content/articlelanding/2018/sm/c8sm01207e#!divAbstract>Controlling deformations of gel-based composites by electromagnetic signals within the GHz frequency range.</a></strong> <em>Soft matter</em>, 14(43), pp.8698-8708 (2018)</p>
+
+<p>83. Schiller, U.D. and Kuksenok, O., 2018. <strong>"Lattice-Boltzmann Modelling of Multicomponent Systems: An Introduction."</strong> <em>Reviews in Computational Chemistry</em>, 31, p.1. John Wiley & Sons (2018)</p>
+
+<p>82. Kuksenok, O, Singh, A., Balazs, A.C. <strong>Designing polymer gels and composites that undergo bio-inspired phototactic reconfiguration and motion.</strong> <em>Bioinspiration & biomimetics</em> 13 (3), 035004 (2018)</p>
+
+<p>81. Kuksenok, O., Liu, Y., Balazs, A.C. <strong>"Modeling Gel-based Artificial Cilia."</strong> <em>Atlas of Cilia Bioengineering and Biocomputing</em>, 149 (2018)</p>
+
+<p>80. Choudhury, C.K., Tu, S., Luzinov, I., Minko, S., Kuksenok, O., <strong><a href=https://pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?af=R>"Designing Highly Thermostable Lysozyme-Copolymer Conjugates: Focus on Effect of Polymer Concentration"</a></strong> <em>Biomacromolecules</em> 19 (4), 1175-1188 (2018) </p>
+
+Choudhury, C.K., Tu, S., Luzinov, I, Minko, S., Kuksenok, O. “Designing Highly Thermostable Lysozyme–Copolymer Conjugates: Focus on Effect of Polymer Concentration” Biomacromolecules 19 (4), 1175-1188 (2018) 
 
 <p>79. Xiong, Y., Dayal, P., Balazs, A.C., Kuksenok, O., <strong><a href=https://onlinelibrary.wiley.com/doi/full/10.1002/ijch.201700137
 >"Phase Transitions and Pattern Formation in Chemo‐Responsive Gels and Composites"</strong></a> Israel Journal of Chemistry (2018).</p>
