--- a/index.html
+++ b/index.html
@@ -71,23 +71,31 @@
         <!-- Heading -->
         <div class="row">
             <div class="col-lg-12">
+
                 <h1 class="page-header">Kuksenok Research Group<br><small>Computational Modeling of Multicomponent Multifunctional Materials</small>
                 </h1>
-                <div class="illustration" style="width:400px">
+                 <a href=group.jpg><img src="group.jpg" style="max-width:700px;width:55%"></a>
+
+                <div class="illustration" style="width:40%;max-width:400px">
                     <a href=https://reader.elsevier.com/reader/sd/pii/S1359028618301827?token=A9B7D8F652579780E5858E3B6669221E75DFE584A7D37A36DBD188EDD3CE1212A01CF51076D02D2690C5F7E0817756E1><img src=images/Picture1.png width=150></a>
                 	<a href=projects.html><img src=images/s5_Animation.gif width=150></a><br><br><a href=projects.html><img src=images/s3_i4.png width=150></a>&nbsp;&nbsp;<a href=https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e><img src=images/BackCoverGreen.jpg width=200></a></div>
                 <!--<h2>About the PI</h2>-->
-                <p>Dr. Kuksenok is an Associate Professor at the Materials Science and Engineering Department at Clemson University in Clemson, SC.  Dr. Kuksenok received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine, in 1997. Dr. Kuksenok’s research interests and accomplishments span the following areas of materials science: elastodynamics of responsive polymer gels, dynamics of multi-component polymer blends, biomimetic and biological materials, pattern formation in non-equilibrium chemical systems, complex fluids dynamics, and theory of heterogeneous liquid crystalline systems. Dr. Kuksenok has co-authored over 80 peer-reviewed publications and 6 book chapters.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao>More on Google Scholar.</a></em></p>
-                <p>Phone: (864) 656-5956<br>
-Office: 299D Sirrine Hall<br>
-E-mail: okuksen at clemson dot edu</a></p>
-        
+
+                <p style="margin-top:20px;margin-right:20px">r. Kuksenok is an Associate Professor at the Materials Science and Engineering Department at Clemson University in Clemson, SC.  Dr. Kuksenok received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine, in 1997. Dr. Kuksenok’s research interests and accomplishments span the following areas of materials science: elastodynamics of responsive polymer gels, dynamics of multi-component polymer blends, biomimetic and biological materials, pattern formation in non-equilibrium chemical systems, complex fluids dynamics, and theory of heterogeneous liquid crystalline systems. Dr. Kuksenok has co-authored over 80 peer-reviewed publications and 6 book chapters.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao>More on Google Scholar.</a></em></p>
+                <br>
                 <div class="h2">Research Areas</div>
 <ul>
     <li>Computational design of biomimetic materials</li>
  <li>Theory and computer simulations of soft active matter</li>
 <li>Pattern formation in synthetic and biological systems</li>
                 </ul>
+
+                                <div class="h2">Contact</div>
+
+                <p>Phone: (864) 656-5956<br>
+Office: 299D Sirrine Hall<br>
+E-mail: okuksen at clemson dot edu</a></p>
+        
 <!--        <div class="h2">In the Press</div>
         <ul>
 
