Updated info and new photos

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
+                        <a href="news.html">News</a>
+                    </li>
+                    <li>
                         <a href="people.html">People</a>
                     </li>
                     <li>
