--- a/people.html
+++ b/people.html
@@ -51,6 +51,9 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
+                        <a href="news.html">News</a>
+                    </li>
+                    <li>
                         <a href="people.html">People</a>
                     </li>
                     <li>
@@ -127,23 +130,31 @@
 
                     </div>
                 </div>
-                <div class="item">
-                    
-                    <div class="small">
-                        <a name="os"><img src="images/people/savchak.png"></a>
-                    </div>
-                    <div class="description">
-                        <p class="title">Oksana Savchak</p>
-                        <p class="subtitle">MS Student</p>
-                        <p class="subtitle">osavcha@<img src=images/emailsuffix.png height=16></p>
-                    </div>
-                </div>
 
 <h1 class="page-header">Former Group Members</h1>
 
-<p><Strong>Chinmay Sonar</Strong>, Summer Internship from  Indian Institute of Technology Gandhinagar, Summer 2017</p>
+
+<h2>Graduate students</h2>
+
+<div class="item">
+    <div class="small">
+        <a name="os"><img src="images/people/savchak.png"></a>
+    </div>
+    <div class="description">
+        <p class="title">Oksana Savchak</p>
+        <p class="subtitle">M.S. August 2018</p>
+        <p class="subtitle">now at LAM International</p>
+    </div>
+</div>
+
+<h2>Undergraduate students</h2>
+
+<p><strong>Kaila Craig</strong>, Biophysics REU, Summer 2018</p>
+<p><strong>Michaela Giltner</strong>, Advanced Material Sciences Summer REU, Summer 2018</p>
+<p><strong>Khili Khamesra</strong>, Summer Internship with Indian Institute of Technology Gandhinagar, Summer 2018
+<p><Strong>Chinmay Sonar</Strong>, Summer Internship from  Indian Institute of Technology Gandhinagar, Summer 2017; now Ph.D. student at UC Santa Barbara</p>
 <p><strong>Samantha  Collins</strong>, Interfaces and Surfaces REU, Summer 2017</p>
-<p><strong>Tyler Morrison</strong>, Interfaces and Surfaces REU, Summer 2016</p>
+<p><strong>Tyler Morrison</strong>, Interfaces and Surfaces REU, Summer 2016; now Ph. D. student at the Ohio State University, Columbus</p>
 
 <h1 class="page-header">Openings</h1>
 
