--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Kuksenok Research Group Openings</title>
+    <title>Kuksenok Research Group Projects</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -49,6 +49,9 @@
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="news.html">News</a>
                     </li>
                     <li>
                         <a href="people.html">People</a>
