--- a/people.html
+++ b/people.html
@@ -158,7 +158,7 @@
 
 <h1 class="page-header">Openings</h1>
 
-<p>We have several openings for Clemson undergraduate students to participate in the undergraduate research projects on computational modeling and simulation of multi-component advanced polymeric materials.  Prior experience in computational modeling (coding in C/C++) is highly desired. Applicants should send their curriculum vitae and a brief description of their research interests to Dr. Olga Kuksenok at <em>okuksen at clemson dot edu</em></p>
+<p>We have several openings for Clemson undergraduate students to participate in the undergraduate research projects on computational modeling and simulation of multi-component advanced polymeric materials.  Prior experience in computational modeling (coding in C/C++) is highly desired. Applicants should send their curriculum vitae and a brief description of their research interests to Dr. Olga Kuksenok at <em>okuksen at clemson dot edu</em><br><br><br><br></p>
                 </ul>
             </div>
         </div>
