--- a/news.html
+++ b/news.html
@@ -80,13 +80,9 @@
                 <h1 class="page-header">News</h1>
                 <h1 class="page-header"><small>August 2019</small></h1>
 
-                <div class="illustration" style="width:40%;max-width:600px">
-                  <img  src="images/photos/2019-08-16_VaibhavPalkar.jpg" style="width:100%"></div>
-                <!--<h2>About the PI</h2>-->
-
-                <p style="margin-top:20px;margin-right:20px">Congratulations to Vaibhav Palkar for winning the best poster award (1st place) at the sixth LAMMPS Workshop and Symposium organized by LAMMPS development team at Sandia Labs in Albuquerque, NM (Aug 2019).<br><br>
-
-<p>On the photo from left to right:  Matthew Lane, workshop organizer, Vaibhav Palkar, and Steve Plimpton, LAMMPS Lead Developer.</p></p>
+<p>Congratulations to Vaibhav Palkar for winning the best poster award (1st place) at the sixth LAMMPS Workshop and Symposium organized by LAMMPS development team at Sandia Labs in Albuquerque, NM (Aug 2019).</p>
+<p style="margin:auto;width:50%;">
+                                      <img  src="images/photos/2019-08-16_VaibhavPalkar.jpg" style="width:100%"><br><br>On the photo from left to right:  Matthew Lane, workshop organizer, Vaibhav Palkar, and Steve Plimpton, LAMMPS Lead Developer.</p>
 
 
 
@@ -98,10 +94,11 @@
                 <img src="images/photos/Kaila3_ withMitchREU2019.jpg" height="200px">
                 </div>
 
- <p>REU 2019 (Biophysics) Collaboration with Prof. Josh Alper, Physics Department): 7th Annual Summer Undergraduate Research Poster Symposium<br><br>Pictured: (1) Kaila Craig; (2) Kaila Craig, Vaibhav Palkar; (3) Kaila Craig, Mitch Woodhouse</p>
+ <p>7th Annual Summer Undergraduate Research Poster Symposium; <a href="https://www.clemson.edu/science/departments/physics-astro/academics/undergrad-research/biophysics-reu/index.html">Biophysics REU</a>, Collaboration with Prof. Josh Alper (Physics Department)
+<br><br>Pictured: (1) Kaila Craig; (2) Kaila Craig, Vaibhav Palkar; (3) Kaila Craig, Mitch Woodhouse</p>
 
  
-                <h1 class="page-header"><small>REU 2019 (MSE)</small></h1>
+                <h2><small>Advanced Material Sciences Summer Program</small></h2>
 
 <p>
                 <img src="images/photos/Michaela1.JPG" height="200px">
@@ -111,7 +108,7 @@
                  <h1 class="page-header"><small>GROUP PHOTOS SUMMER 2019</small></h1>
 
 
-<img src="images/photos/GroupSummer2019_1.jpg" width=700px>
+<img src="images/photos/GroupSummer2019_1.jpg" width=600px>
 
 
  
@@ -122,15 +119,13 @@
 Congratulations to Oksana Savchak!<br><br>
 
  
-<img src="images/photos/Misk/Oksana'sGraduation_August2018 2.jpg" height=400>
 <img src="images/photos/OksanaAug2018.jpg" height=400>
  
 
  
                  <h1 class="page-header"><small>GROUP PHOTOS SUMMER 2018</small></h1>
 
-                <img src="images/photos/GroupSummer2018_2.jpg" height="350px">
-                <img src="images/photos/GroupSummer2018_3.jpg" height="350px">
+                <img src="images/photos/GroupSummer2018_2.jpg" height="300px">&nbsp;<img src="images/photos/GroupSummer2018_3.jpg" height="300px">
 <br><br><br>
             </div>
         </div>
