Changed image layout

--- a/news.html
+++ b/news.html
@@ -81,23 +81,21 @@
                 <h1 class="page-header"><small>August 2019</small></h1>
 
 <p>Congratulations to Vaibhav Palkar for winning the best poster award (1st place) at the sixth LAMMPS Workshop and Symposium organized by LAMMPS development team at Sandia Labs in Albuquerque, NM (Aug 2019).</p>
-<p style="margin:auto;width:50%;">
+<p style="width:45%">
                                       <img  src="images/photos/2019-08-16_VaibhavPalkar.jpg" style="width:100%"><br><br>On the photo from left to right:  Matthew Lane, workshop organizer, Vaibhav Palkar, and Steve Plimpton, LAMMPS Lead Developer.</p>
 
 
 
                 <h1 class="page-header"><small>July 2019</small></h1>
 
-                <div class="illustration" style="width:80%;max-width:800px">
-                <img src="images/photos/Kaila1_ REU2109.jpg" height="200px">
-                <img src="images/photos/Kaila2_ withVaibhavREU2019.jpg" height="200px">
-                <img src="images/photos/Kaila3_ withMitchREU2019.jpg" height="200px">
+                <div style="float:right;white-space: nowrap;white-space: nowrap;padding-left:10px">
+                <img src="images/photos/Kaila2_ withVaibhavREU2019.jpg" height="300">&nbsp;<img src="images/photos/Kaila3_ withMitchREU2019.jpg" height="300">
                 </div>
 
  <p>7th Annual Summer Undergraduate Research Poster Symposium; <a href="https://www.clemson.edu/science/departments/physics-astro/academics/undergrad-research/biophysics-reu/index.html">Biophysics REU</a>, Collaboration with Prof. Josh Alper (Physics Department)
-<br><br>Pictured: (1) Kaila Craig; (2) Kaila Craig, Vaibhav Palkar; (3) Kaila Craig, Mitch Woodhouse</p>
+<br><br>Pictured:<br>(left) Kaila Craig, Vaibhav Palkar;<br>(right) Kaila Craig, Mitch Woodhouse</p>
 
- 
+
                 <h2><small>Advanced Material Sciences Summer Program</small></h2>
 
 <p>
