--- a/news.html
+++ b/news.html
@@ -88,15 +88,13 @@
 
                 <h1 class="page-header"><small>July 2019</small></h1>
 
-                <div style="float:right;white-space: nowrap;white-space: nowrap;padding-left:10px">
-                <img src="images/photos/Kaila2_ withVaibhavREU2019.jpg" height="300">&nbsp;<img src="images/photos/Kaila3_ withMitchREU2019.jpg" height="300">
-                </div>
-
- <p>7th Annual Summer Undergraduate Research Poster Symposium; <a href="https://www.clemson.edu/science/departments/physics-astro/academics/undergrad-research/biophysics-reu/index.html">Biophysics REU</a>, Collaboration with Prof. Josh Alper (Physics Department)
-<br><br>Pictured:<br>(left) Kaila Craig, Vaibhav Palkar;<br>(right) Kaila Craig, Mitch Woodhouse</p>
+ <p>7th Annual Summer Undergraduate Research Poster Symposium; <a href="https://www.clemson.edu/science/departments/physics-astro/academics/undergrad-research/biophysics-reu/index.html">Biophysics REU</a>, Collaboration with Prof. Josh Alper (Physics Department)</p>
+<p>
+                <img src="images/photos/Kaila2_ withVaibhavREU2019.jpg" height="300">&nbsp;<img src="images/photos/Kaila3_ withMitchREU2019.jpg" height="300"></p>
+ <p>Pictured:<br>(left) Kaila Craig, Vaibhav Palkar;<br>(right) Kaila Craig, Mitch Woodhouse</p>
 
 
-                <h2><small>Advanced Material Sciences Summer Program</small></h2>
+                <h2><small>Advanced Materials Summer Program</small></h2>
 
 <p>
                 <img src="images/photos/Michaela1.JPG" height="200px">
