news with photos Dec 2019 updated

--- a/pubs.html
+++ b/pubs.html
@@ -78,6 +78,12 @@
                 <h1 class="page-header">Publications
                 </h1>
 
+
+<p>85. Palkar, V., Aprelev, V.,  Salamatin, A., Brasovs. A., Kuksenok, O,,  Kornev, K.G.  <strong><a href= https://journals.aps.org/pre/abstract/10.1103/PhysRevE.100.051101
+ 
+>"Rotating magnetic nanorods detect minute fluctuations of magnetic field”</a></strong>. Phys. Rev. E 100, 051101 (2019) </p>
+
+
 <p>84. Tu, S., Choudhury, C. K., Luzinov, I., Kuksenok., O. <strong><a href= https://doi.org/10.1016/j.cossms.2019.01.003  
 >"Recent advances towards applications of molecular bottlebrushes and their Conjugates”</a></strong>. Current Opinion in Solid State and Materials Science (2019) </p>
 
