news change size

--- a/news.html
+++ b/news.html
@@ -97,7 +97,7 @@
 
 <p>Congratulations to Vaibhav Palkar for winning the best poster award (1st place) at the sixth LAMMPS Workshop and Symposium organized by LAMMPS development team at Sandia Labs in Albuquerque, NM (Aug 2019).</p>
 <p style="width:45%">
-                                      <img  src="images/photos/2019-08-16_VaibhavPalkar.jpg" style="width:100%"><br><br>On the photo from left to right:  Matthew Lane, workshop organizer, Vaibhav Palkar, and Steve Plimpton, LAMMPS Lead Developer.</p>
+                                      <img  src="images/photos/2019-08-16_VaibhavPalkar.jpg" height="440px"></p><br><br>On the photo from left to right:  Matthew Lane, workshop organizer, Vaibhav Palkar, and Steve Plimpton, LAMMPS Lead Developer.</p>
 
 
 
@@ -105,15 +105,15 @@
 
  <p>7th Annual Summer Undergraduate Research Poster Symposium; <a href="https://www.clemson.edu/science/departments/physics-astro/academics/undergrad-research/biophysics-reu/index.html">Biophysics REU</a>, Collaboration with Prof. Josh Alper (Physics Department)</p>
 <p>
-                <img src="images/photos/Kaila2_ withVaibhavREU2019.jpg" height="290">&nbsp;<img src="images/photos/Kaila3_ withMitchREU2019.jpg" height="290"></p>
+                <img src="images/photos/Kaila2_ withVaibhavREU2019.jpg" height="270">&nbsp;<img src="images/photos/Kaila3_ withMitchREU2019.jpg" height="270"></p>
  <p>Pictured:<br>(left) Kaila Craig, Vaibhav Palkar;<br>(right) Kaila Craig, Mitch Woodhouse</p>
 
 
                 <h2><small>Advanced Materials Summer Program</small></h2>
 
 <p>
-                <img src="images/photos/Michaela1.JPG" height="210px">
-                <img src="images/photos/Michaela2.jpg" height="210px"><br>Michaela Giltner and Sidong Tu</p>
+                <img src="images/photos/Michaela1.JPG" height="200px">
+                <img src="images/photos/Michaela2.jpg" height="200px"><br>Michaela Giltner and Sidong Tu</p>
 
 
                  <h1 class="page-header"><small>GROUP PHOTOS SUMMER 2019</small></h1>
@@ -130,13 +130,13 @@
 Congratulations to Oksana Savchak!<br><br>
 
  
-<img src="images/photos/OksanaAug2018.jpg" height=400>
+<img src="images/photos/OksanaAug2018.jpg" height=350>
  
 
  
                  <h1 class="page-header"><small>GROUP PHOTOS SUMMER 2018</small></h1>
 
-                <img src="images/photos/GroupSummer2018_2.jpg" height="290px">&nbsp;<img src="images/photos/GroupSummer2018_3.jpg" height="290px">
+                <img src="images/photos/GroupSummer2018_2.jpg" height="280px">&nbsp;<img src="images/photos/GroupSummer2018_3.jpg" height="280px">
 <br><br><br>
             </div>
         </div>
